--- a/index.html
+++ b/index.html
@@ -1,13 +1,51 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
 
-</body>
+    <!--Internal-->
+    <!--Inline-->
+    <!--External-->
+        <link rel="stylesheet" href="basic.css">
+    </head>
+    <body>
+        <h2 class="blue-text">Practicing with css</h2>
+        <p>Paragraph 1</p>
+        <p>Paragraph 2</p>
+        <p id="p3">Paragraph 3</p>
+        <p>Paragraph 4</p>
+        <p>Paragraph 5</p>
+
+        <div class="grid">
+            <div class="background-color">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, aliquid dolor eaque earum ipsum
+                laborum necessitatibus pariatur quas! Dolores eaque facere laboriosam maxime mollitia natus nesciunt,
+                quod ratione rem unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam autem blanditiis
+                cumque cupiditate deserunt doloribus dolorum ea earum, ipsum libero magnam magni molestiae nisi odio
+                pariatur reiciendis velit vitae voluptate! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Culpa doloremque enim exercitationem id laboriosam magni maxime mollitia, nam necessitatibus numquam
+                obcaecati perspiciatis porro quis reiciendis repudiandae sapiente sunt veritatis voluptatibus?
+            </div>
+
+            <div class="background-image">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, aliquid dolor eaque earum ipsum
+                laborum necessitatibus pariatur quas! Dolores eaque facere laboriosam maxime mollitia natus nesciunt,
+                quod ratione rem unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam autem blanditiis
+                cumque cupiditate deserunt doloribus dolorum ea earum, ipsum libero magnam magni molestiae nisi odio
+                pariatur reiciendis velit vitae voluptate! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Culpa doloremque enim exercitationem id laboriosam magni maxime mollitia, nam necessitatibus numquam
+                obcaecati perspiciatis porro quis reiciendis repudiandae sapiente sunt veritatis voluptatibus?
+            </div>
+            <div class="background-color-image">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, aliquid dolor eaque earum ipsum
+                laborum necessitatibus pariatur quas! Dolores eaque facere laboriosam maxime mollitia natus nesciunt,
+                quod ratione rem unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam autem blanditiis
+                cumque cupiditate deserunt doloribus dolorum ea earum, ipsum libero magnam magni molestiae nisi odio
+                pariatur reiciendis velit vitae voluptate! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Culpa doloremque enim exercitationem id laboriosam magni maxime mollitia, nam necessitatibus numquam
+                obcaecati perspiciatis porro quis reiciendis repudiandae sapiente sunt veritatis voluptatibus?
+            </div>
+        </div>
+    </body>
 </html>
